--- a/dev/tutorials/geometric_reactions+conditional_closures/index.html
+++ b/dev/tutorials/geometric_reactions+conditional_closures/index.html
@@ -75,8 +75,8 @@ pmap = [:k_on =&gt; k_on_val,
           :γ_p =&gt; γ_p_val,
           :b =&gt; mean_b]
 
-# initial gene state and protein number, order [g, p]
-u₀ = [1, 1]
+# initial gene state and protein number
+u0map = [:g =&gt; 1, :P =&gt; 1]
 
 # time interval to solve on
 tspan = (0., 6.0)</code></pre><p>The reaction network with geometric bursts can be simulated using the SSA as usual:</p><pre><code class="language-julia hljs"># convert the reaction network into a system of jump processes
@@ -84,7 +84,7 @@ jsys = convert(JumpSystem, rn; combinatoric_ratelaws=false)
 jsys = complete(jsys)
 
 # create a discrete problem setting the simulation parameters
-dprob = DiscreteProblem(u₀, tspan, pmap)
+dprob = DiscreteProblem(u0map, tspan, pmap)
 
 # create a JumpProblem compatible with ReactionSystemMod
 jprob = JumpProblem(rn, dprob, Direct(), save_positions=(false, false))
@@ -96,9 +96,6 @@ ensembleprob  = EnsembleProblem(jprob)
 means_ssa, vars_ssa = timeseries_steps_meanvar(sol_SSA)</code></pre><pre><code class="language-julia hljs">4.858357 seconds (14.30 M allocations: 901.032 MiB, 6.25% gc time, 63.45% compilation time)</code></pre><p>We continue to solve the moment equations for each closure:</p><pre><code class="language-julia hljs">plt_m = plot()   # plot mean protein number
 plt_std = plot() # plot ssd of protein number
 
-# construct the initial molecule number mapping
-u₀map = deterministic_IC(u₀, dm_eqs)
-
 # solve moment ODEs for each closure and plot the results
 for closure in [&quot;normal&quot;, &quot;derivative matching&quot;,
                 &quot;conditional gaussian&quot;, &quot;conditional derivative matching&quot;]
@@ -107,7 +104,7 @@ for closure in [&quot;normal&quot;, &quot;derivative matching&quot;,
     closed_eqs = moment_closure(eqs, closure, binary_vars)
 
     # solve the system of moment ODEs
-    oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)
+    oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)
     sol = solve(oprob, AutoTsit5(Rosenbrock23()), saveat=0.01)
 
     # μ₀₁ is 2nd and μ₀₂ is 4th element in sol
@@ -179,12 +176,12 @@ pmap = [:kx_on =&gt; kx_on_val,
           :b_y =&gt; mean_b_y]
 
 # initial gene state and protein number, order [g_x, g_y, x, y]
-u₀ = [1, 1, 1, 1]
+u0map = [:g_x =&gt; 1, :g_y =&gt; 1, :x =&gt; 1, :y =&gt; 1]
 
 # time interval to solve on
 tspan = (0., 12.0)</code></pre><p>Note that here we use a different parameter set from the one considered in [1] as otherwise the number of <span>$X$</span> proteins goes into millions, making the comparison between closure results difficult due to SSA being extremely slow—it appears that either we have included a mistake setting the parameter values or there is a typo in the paper.</p><p>We can run SSA as follows:</p><pre><code class="language-julia hljs">jsys = convert(JumpSystem, rn, combinatoric_ratelaws=false)
 jsys = complete(jsys)
-dprob = DiscreteProblem(jsys, u₀, tspan, pmap)
+dprob = DiscreteProblem(jsys, u0map, tspan, pmap)
 jprob = JumpProblem(jsys, dprob, Direct(), save_positions=(false, false))
 
 ensembleprob  = EnsembleProblem(jprob)
@@ -195,9 +192,7 @@ plt_std = plot() # plot ssd of activator protein number
 for closure in [&quot;derivative matching&quot;, &quot;conditional derivative matching&quot;]
 
     closed_eqs = moment_closure(eqs, closure, binary_vars)
-
-    u₀map = deterministic_IC(u₀, closed_eqs)
-    oprob = ODEProblem(closed_eqs, u₀map, tspan, pmap)
+    oprob = ODEProblem(closed_eqs, u0map, tspan, pmap)
     sol = solve(oprob, Tsit5(), saveat=0.1)
 
     # μ₀₀₀₁ is the 4th and μ₀₀₀₂ is the 12th element in sol (can check with closed_eqs.odes.states)
@@ -208,4 +203,4 @@ end
 plt_m = plot!(plt_m, xlabel=&quot;Time [hr]&quot;, ylabel=&quot;Activator mean level&quot;)
 plt_m = plot!(plt_m, means_ssa.t, means_ssa[4,:], label=&quot;SSA&quot;, linestyle=:dash, color=&quot;gray&quot;)
 plt_std = plot!(plt_std, xlabel=&quot;Time [hr]&quot;, ylabel=&quot;Activator standard deviation&quot;)
-plt_std = plot!(plt_std, vars_ssa.t, sqrt.(vars_ssa[4,:]), label=&quot;SSA&quot;, linestyle=:dash, color=&quot;gray&quot;)</code></pre><p>Note that here we apply only derivative matching and conditional derivative matching, as both normal and conditional gaussian closures failed to be evaluated for the entire time course (irrespective of the solver used). Finally, we can plot the results:</p><pre><code class="language-julia hljs">plot(plt_m, lw=2)</code></pre><p><img src="../../assets/gene_2_means.svg" alt="Gene 2 means"/></p><pre><code class="language-julia hljs">plot(plt_std, lw=2, xlims=(0., 12.))</code></pre><p><img src="../../assets/gene_2_stds.svg" alt="Gene 2 stds"/></p><p>The trajectories obtained with conditional derivative matching quite accurately match the true dynamics, showing that it is indeed a powerful closure method for reaction networks involving species with very low (binary) copy numbers.</p><h2 id="References"><a class="docs-heading-anchor" href="#References">References</a><a id="References-1"></a><a class="docs-heading-anchor-permalink" href="#References" title="Permalink"></a></h2><p>[1]: M. Soltani, C. A. Vargas-Garcia, and A. Singh, &quot;Conditional Moment Closure Schemes for Studying Stochastic Dynamics of Genetic Circuits&quot;, IEEE Transactions on Biomedical Circuits and Systems 9, 518–526 (2015). <a href="https://doi.org/10.1109/tbcas.2015.2453158">https://doi.org/10.1109/tbcas.2015.2453158</a></p><p>[2]: D. Schnoerr, G. Sanguinetti, and R. Grima, &quot;Approximation and inference methods for stochastic biochemical kinetics - a tutorial review&quot;, Journal of Physics A: Mathematical and Theoretical 50, 093001 (2017). <a href="https://doi.org/10.1088/1751-8121/aa54d9">https://doi.org/10.1088/1751-8121/aa54d9</a></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../time-dependent_propensities/">« Time-dependent Propensity Functions</a><a class="docs-footer-nextpage" href="../P53_system_example/">P53 System Example »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.11.4 on <span class="colophon-date" title="Thursday 29 May 2025 12:27">Thursday 29 May 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+plt_std = plot!(plt_std, vars_ssa.t, sqrt.(vars_ssa[4,:]), label=&quot;SSA&quot;, linestyle=:dash, color=&quot;gray&quot;)</code></pre><p>Note that here we apply only derivative matching and conditional derivative matching, as both normal and conditional gaussian closures failed to be evaluated for the entire time course (irrespective of the solver used). Finally, we can plot the results:</p><pre><code class="language-julia hljs">plot(plt_m, lw=2)</code></pre><p><img src="../../assets/gene_2_means.svg" alt="Gene 2 means"/></p><pre><code class="language-julia hljs">plot(plt_std, lw=2, xlims=(0., 12.))</code></pre><p><img src="../../assets/gene_2_stds.svg" alt="Gene 2 stds"/></p><p>The trajectories obtained with conditional derivative matching quite accurately match the true dynamics, showing that it is indeed a powerful closure method for reaction networks involving species with very low (binary) copy numbers.</p><h2 id="References"><a class="docs-heading-anchor" href="#References">References</a><a id="References-1"></a><a class="docs-heading-anchor-permalink" href="#References" title="Permalink"></a></h2><p>[1]: M. Soltani, C. A. Vargas-Garcia, and A. Singh, &quot;Conditional Moment Closure Schemes for Studying Stochastic Dynamics of Genetic Circuits&quot;, IEEE Transactions on Biomedical Circuits and Systems 9, 518–526 (2015). <a href="https://doi.org/10.1109/tbcas.2015.2453158">https://doi.org/10.1109/tbcas.2015.2453158</a></p><p>[2]: D. Schnoerr, G. Sanguinetti, and R. Grima, &quot;Approximation and inference methods for stochastic biochemical kinetics - a tutorial review&quot;, Journal of Physics A: Mathematical and Theoretical 50, 093001 (2017). <a href="https://doi.org/10.1088/1751-8121/aa54d9">https://doi.org/10.1088/1751-8121/aa54d9</a></p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../time-dependent_propensities/">« Time-dependent Propensity Functions</a><a class="docs-footer-nextpage" href="../P53_system_example/">P53 System Example »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.11.4 on <span class="colophon-date" title="Monday 2 June 2025 07:59">Monday 2 June 2025</span>. Using Julia version 1.11.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
